--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <link rel="stylesheet" href="CSS/styles.css">
   <link rel="icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Bitter&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bitter&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -22,7 +22,7 @@
     <div class="profile">
       <img class="profile-pic" src="Images/profile_pic.png" alt="profile_pic">
       <h2>Hello, Nice To Meet You!</h2>
-      <p>I'm from Portugal and my love for coding has been growing for many years.</p>
+      <p>I'm from Portugal and my love for coding has been growing for many years</p>
     </div>
     <hr>
     <div class="skills">
@@ -30,35 +30,34 @@
       <div class="skill-row">
         <img class="code" src="Images/coding.png" alt="code">
         <h3>Web development</h3>
-        <p> Took part on SheCodes coding workshops and never stopped ever since. </p>
+        <p> Took part on SheCodes coding workshops and never stopped ever since </p>
       </div>
       <div class="skill-row">
-        <img class="veterinarian"src="Images/veterinary.png" alt="Vet">
+        <img class="veterinarian" src="Images/veterinary.png" alt="Vet">
         <h3>Veterinarian</h3>
-        <p>Apart from coding, I'm also a small animal veterinarian.</p>
+        <p>Apart from coding, I'm also a small animal veterinarian</p>
+      </div>
+      <div class="skill-row">
+        <img class="videogames" src="Images/game-pad.png" alt="videogames">
+        <h3>Videogames</h3>
+        <p>I'm a huge videogames fan. Uncharted, Valorant, you name it! </p>
+      </div>
+      <hr>
+      <div class="contact-me">
+        <h2>Get In Touch</h2>
+        <h3>If you love videogames as much as I do</h3>
+        <p class="contact-p">Let's talk about how awesome they are! We can discuss our new project while playing!</p>
+        <a class="btn" href="mailto:rita.picado@sapo.pt">CONTACT ME</a>
+      </div>
     </div>
-    <div class="skill-row">
-      <img class="videogames"src="Images/game-pad.png" alt="videogames">
-      <h3>Videogames</h3>
-      <p>I'm a huge videogames fan. Uncharted, Valorant, you name it! </p>
-  </div>
-    <hr>
-    <div class="contact-me">
-      <h2>Get In Touch</h2>
-      <h3>If you love videogames as much as I do</h3>
-      <p class="contact-p">Let's talk about how awesome they are! We can discuss our new project while playing!</p>
-      <a class="btn" href="mailto:rita.picado@sapo.pt">CONTACT ME</a>
+    <div class="bottom-container">
+      <a class="footer-link" href="https://www.linkedin.com/in/rita-picado-81b17b1a4/">LinkedIn</a>
+      <a class="footer-link" href="https://github.com/ritanpicado">GitHub</a>
+      <a class="footer-link" href="https://www.instagram.com/cheeseasleep/">Instagram</a>
+      <p class="Copyright">© 2022 Rita Picado</p>
     </div>
-  </div>
-
-
-  <div class="bottom-container">
-    <a class="footer-link" href="https://www.linkedin.com/in/rita-picado-81b17b1a4/">LinkedIn</a>
-    <a class="footer-link" href="https://github.com/ritanpicado">GitHub</a>
-    <a class="footer-link" href="https://www.instagram.com/cheeseasleep/">Instagram</a>
-    <p class="Copyright">© 2022 Rita Picado</p>
-  </div>
 
 </body>
 
 </html>
+
