--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         <a class="btn" href="mailto:rita.picado@sapo.pt">CONTACT ME</a>
       </div>
     </div>
+  </div>
     <div class="bottom-container">
       <a class="footer-link" href="https://www.linkedin.com/in/rita-picado-81b17b1a4/">LinkedIn</a>
       <a class="footer-link" href="https://github.com/ritanpicado">GitHub</a>
@@ -60,4 +61,5 @@
 </body>
 
 </html>
+
 
