--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="profile">
       <img class="profile-pic" src="Images/profile_pic.png" alt="profile_pic">
       <h2>Hello, Nice To Meet You!</h2>
-      <p>I'm from Portugal and my love for coding has been growing for many years</p>
+      <p>I'm from Portugal and my love for coding has been growing for many years.</p>
     </div>
     <hr>
     <div class="skills">
@@ -30,12 +30,12 @@
       <div class="skill-row">
         <img class="code" src="Images/coding.png" alt="code">
         <h3>Web development</h3>
-        <p> Took part on SheCodes coding workshops and never stopped ever since </p>
+        <p> Took part on SheCodes coding workshops and never stopped ever since. </p>
       </div>
       <div class="skill-row">
         <img class="veterinarian" src="Images/veterinary.png" alt="Vet">
         <h3>Veterinarian</h3>
-        <p>Apart from coding, I'm also a small animal veterinarian</p>
+        <p>Apart from coding, I'm also a small animal veterinarian.</p>
       </div>
       <div class="skill-row">
         <img class="videogames" src="Images/game-pad.png" alt="videogames">
